Refatoração (frontend): migrar o estado de autenticação para runes do Svelte 5 e adicionar gerenciamento de configuração
- Substituir `auth.store` por runes `$state` do Svelte 5 para melhor reatividade
- Adicionar serviço e componentes de gerenciamento de configuração
- Atualizar a configuração do JWT para usar nomenclatura de propriedades consistente (expiration-ms)
- Remover a view `editor-magico` não utilizada da barra lateral
- Adicionar utilitários de formatação e validação
- Corrigir o estilo do componente de planilha e adicionar a opção `hideClose`
- Atualizar o uso de variáveis ​​de ambiente de dinâmicas para estáticas
- Adicionar configuração de perfil de produção para o backend
- Limpar artefatos de build e arquivos de teste do repositório